# fastapi-rbac

./: Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: PROGRESS.md  architecture.md
rbac/: manager.py  models.py
rbac/api/: main.py  schemas.py
rbac/core/: __init__.py  manager.py
rbac/dsd/: base.py  memory.py
rbac/schemas/: dsd.py  permissions.py  roles.py  session.py  ssd.py  users.py
rbac/ssd/: base.py  memory.py
rbac/storage/: __init__.py  base.py  memory.py
tests/: conftest.py  test_api.py  test_dsd.py  test_manager.py  test_models.py  test_storage.py
