[tool.poetry]
name = "fastapi-rbac"
version = "0.1.0"
description = "Modern, pluggable RBAC library for FastAPI and multi-tenant SaaS"
authors = ["Ramanuj P <ramanuj.p7@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rbac" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
